# discbag

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
discbag/: __init__.py  analysis.py  braille.py  chart.py  cli.py  db.py  export.py  history.py  inventory.py  maturity.py  player.py  recommend.py  roles.py
discbag/data/: discs.json
docs/superpowers/plans/: 2026-07-13-compare-redesign.md  2026-07-13-disc-metadata-edit.md  2026-07-14-audit-fixes.md  2026-07-14-collection-maturity.md  2026-07-14-partial-manufacturer-specs-v1.md  2026-07-20-export-json.md
docs/superpowers/specs/: 2026-07-12-disc-event-timeline-design.md  2026-07-12-disc-lost-damaged-lifecycle-design.md  2026-07-13-compare-redesign-design.md  2026-07-13-disc-metadata-edit-design.md  2026-07-14-audit-fixes-design.md  2026-07-14-collection-maturity-design.md  2026-07-14-partial-manufacturer-specs-v1-design.md  2026-07-20-export-json-design.md
tests/: conftest.py  test_analysis.py  test_braille.py  test_chart.py  test_cli.py  test_db.py  test_export.py  test_export_invariants.py  test_history.py  test_inventory.py  test_maturity.py  test_personalize.py  test_player.py  test_priority.py  test_recommend.py  test_roles.py
tests/fixtures/: export_snapshot.json
